# f2c-data-share

./: CMakeLists.txt  README.md
src/: data_share.c  data_share.f90
